<resources>
    <string name="app_name">My In Out Note</string>
    <string name="title_cash_in">Cash In</string>
    <string name="title_cash_out">Cash Out</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <string name="cash_in_date">Cash In Date</string>
    <string name="cash_out_date">Cash Out Date</string>

    <string name="cash_in_category">Cash In Category</string>
    <string name="cash_out_category">Cash Out Category</string>

    <string name="cash_out_amount">Cash Out Amount</string>
    <string name="cash_in_amount">Cash In Amount</string>

    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="action_settings">Settings</string>

    <string name="edit_name">Name : </string>
    <string name="edit_nrc">NRC Card : </string>
    <string name="edit_gender">Gender : </string>
    <string name="edit_phone">Phone : </string>
    <string name="edit_address">Address : </string>

    <string name="cash_in">Cash In</string>
    <string name="cash_out">Cash Out</string>

    <string name="today">Today Total</string>

    <string name="dashboard_cash_in">Add \nCash In Amount</string>
    <string name="dashboard_cash_out">Add \nCash Out Amount</string>

</resources>
