<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OutCategoryActivity"
    android:orientation="vertical"
    android:background="@color/colorBg"
    android:weightSum="3">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/p60"
        app:cardCornerRadius="@dimen/p10"
        app:cardElevation="@dimen/p10"
        android:layout_margin="@dimen/p20">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/p20"
            android:paddingRight="@dimen/p20">

            <customFonts.MyTextView_SF_Pro_Display_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_in_category"
                android:textSize="23dp"
                android:textColor="@color/colorPrimary"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/p10"
        app:cardElevation="@dimen/p10"
        android:layout_marginLeft="@dimen/p20"
        android:layout_marginRight="@dimen/p20"
        android:layout_marginBottom="@dimen/p20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/p20">

            <customFonts.EditText__SF_Pro_Display_Regular
                android:id="@+id/et_outcategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/p10"
                android:hint="@string/cash_out_category"
                android:background="@drawable/edittext_style"
                android:layout_marginBottom="@dimen/p20"/>

            <customFonts.Button_SF_Pro_Display_Medium
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="@dimen/form_text_size"
                android:textColor="@android:color/white"
                android:background="@color/colorText" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>