<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/p10">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/p10"
            android:layout_marginBottom="@dimen/p10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/p20">

                <customFonts.MyTextView_SF_Pro_Display_Semibold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/p10"
                    android:text="@string/today"
                    android:textColor="@color/colorText"
                    android:textSize="18dp"
                    android:gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/p10">

                        <customFonts.MyTextView_SF_Pro_Display_Medium
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/p5"
                            android:gravity="center_horizontal"
                            android:text="@string/cash_in"
                            android:textColor="@color/colorText"
                            android:textSize="@dimen/form_text_size" />

                        <customFonts.MyTextView_SF_Pro_Display_Semibold
                            android:id="@+id/tv_todaycashin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="100000"
                            android:textColor="@color/colorText"
                            android:textSize="@dimen/p20"
                            android:layout_marginBottom="@dimen/p10" />

                        <View
                            android:layout_width="@dimen/p20"
                            android:layout_height="2dp"
                            android:background="@android:color/holo_green_dark"
                            android:layout_gravity="center_horizontal"/>
                    </LinearLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="50dp"
                        android:background="@color/colorText"
                        android:layout_gravity="center_vertical"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/p10">

                        <customFonts.MyTextView_SF_Pro_Display_Medium
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/p5"
                            android:gravity="center_horizontal"
                            android:text="@string/cash_out"
                            android:textColor="@color/colorText"
                            android:textSize="@dimen/form_text_size" />

                        <customFonts.MyTextView_SF_Pro_Display_Semibold
                            android:id="@+id/tv_todaycashout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="100000"
                            android:textColor="@color/colorText"
                            android:textSize="@dimen/p20"
                            android:layout_marginBottom="@dimen/p10" />

                        <View
                            android:layout_width="@dimen/p20"
                            android:layout_height="2dp"
                            android:background="@android:color/holo_red_light"
                            android:layout_gravity="center_horizontal"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>